[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/Objects/Projectiles/turret_shot_el1.png" type="Texture" id=1]
[ext_resource path="res://resources/Objects/Projectiles/turret_shot_el2.png" type="Texture" id=2]
[ext_resource path="res://resources/Objects/Projectiles/turret_shot_el3.png" type="Texture" id=3]
[ext_resource path="res://resources/Objects/Projectiles/turret_shot_el4.png" type="Texture" id=4]
[ext_resource path="res://resources/Objects/Projectiles/turret_shot_back.png" type="Texture" id=5]
[ext_resource path="res://scripts/entities/Projectiles/ShockPlate.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 150, 100 )

[node name="ShockPlate" type="Node2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 6 )
modulateColor = Color( 0.631373, 0.2, 0.6, 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 1, -1.22943 )
rotation = 1.5708
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
rotation = 1.5708
frames = SubResource( 1 )
frame = 1
playing = true

[node name="HurtZone" type="Area2D" parent="."]
visible = false
input_pickable = false
collision_layer = 0
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtZone"]
shape = SubResource( 2 )

[node name="Timers" type="Node" parent="."]

[node name="BecomeHurtfulTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 1.2
one_shot = true

[node name="StayHurtfulTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 3.2
one_shot = true
[connection signal="body_entered" from="HurtZone" to="." method="_on_HurtZone_body_entered"]
[connection signal="body_exited" from="HurtZone" to="." method="_on_HurtZone_body_exited"]
[connection signal="timeout" from="Timers/BecomeHurtfulTimer" to="." method="_on_BecomeHurtfulTimer_timeout"]
[connection signal="timeout" from="Timers/StayHurtfulTimer" to="." method="_on_StayHurtfulTimer_timeout"]
